# mi-segundo-cerebro

./: .env  .gitignore  CLAUDE.local.md  CLAUDE.md  CLAUDE.remote.md  extract_v1.js
.Archive/: index.css  index.html
.claude/: settings.local.json
.obsidian/: app.json  workspace.json
.openclaude/: settings.local.json
Accounting Team/: CLAUDE.md  README.md  Ultimate Claude Skills & Plugins Prompt.md
Claude + HyperFrames/: Guia_Flujo_De_Trabajo.md  Pipeline_Hibrido_HyperFrames.md
Clonar Canales/: .env.example  CLAUDE.md  Capitulo_1.md  Capitulo_1_Video_Prompts.md  CloneMD  Ideas_COLDFUSION_Importar_Airtable.csv  Ideas_GENIAL_Importar_Airtable.csv  The_Trillion_Dollar_Lie_Capitulo_Final.md  The_Trillion_Dollar_Lie_Video_Prompts.md  cinematic_dictionary.md  orchestrator.py
Generar Youtube Video/: .gitignore  Makefile  README.md  README_EXTRA.md  main.py  requirements.txt
autoclaw/: best_practices.md  resultados.txt
cinematic-site-components/: brand-card.html  micheline-alt.html  skill.md
ia-content-creation/: README.md  cinematographer-system-prompt.txt  frame-to-frame-guide.md  nano-veo-n8n-workflow.json  nanobanana-ad-machine-guide.md  nanobanana-ad-machine-workflow.json  popcorn-storyboard-guide.md  seedream-4k-upscale-guide.md  seedream-4k-upscale-workflow.json  sora2-n8n-guide.md  sora2-n8n-workflow.json  veo3-n8n-skeleton-guide.md  veo3-n8n-skeleton-workflow.json  viral-exploding-videos-guide.md  wan2.5-n8n-guide.md  wan2.5-n8n-workflow.json
isosmart-titanium/: .env.example  .gitignore  LICENSE  README.md  SPEC.md  app.py  requirements.txt  start.bat  start.sh
trading/alpaca/alpaca-mcp-server/: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
trading/alpaca/alpaca-mcp-server/.github/workflows/: ci.yml
trading/alpaca/alpaca-mcp-server/scripts/: sync-specs.sh
trading/alpaca/alpaca-mcp-server/src/alpaca_mcp_server/: __init__.py  cli.py  market_data_overrides.py  names.py  overrides.py  server.py  toolsets.py
trading/alpaca/alpaca-mcp-server/src/alpaca_mcp_server/specs/: market-data-api.json  trading-api.json
trading/alpaca/alpaca-mcp-server/tests/: conftest.py  test_integrity.py  test_paper_integration.py  test_server_construction.py
(+247 files in other folders)
